--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -2178,7 +2178,7 @@
       <div class="rows grunt hide-magic">
         <button data-i18n="astralinitiative" name="Astral Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{astralinitiative}}}{{base=^{base}}}{{dice=[[((@{astral_mod})+@{wounds_toggle}+@{modifiers_toggle})+(@{astral_dice})d6cf0 &{tracker}]]}}">Astral Initiative</button>
         <label class="settings" data-i18n-title="modifier" title="modifier">
-          <input name="attr_astral_modifier" placeholder="0" title="@{astral_modifier}" type="number" value="0"/>
+          <input name="attr_astral_mod_modifier" placeholder="0" title="@{astral_modifier}" type="number" value="0"/>
         </label><span class="settings">+</span>
         <label class="settings" data-i18n-title="modifierdice" title="Modifier Dice">
           <input min="0" max="4" name="attr_astral_dice_modifier" placeholder="0" title="@{astral_dice_modifier}" type="number" value="0"/>
@@ -2187,7 +2187,7 @@
       <div class="rows grunt vehicle sprite host">
         <button data-i18n="matrixinitiative" name="Matrix Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{matrixinitiative}}}{{base=^{base}}}{{dice=[[((@{matrix_mod})+@{wounds_toggle}+@{modifiers_toggle})+(@{matrix_dice})d6cf0 &{tracker}]]}}">Matrix Initiative</button>
         <label class="settings" data-i18n-title="modifier" title="modifier">
-          <input name="attr_matrix_modifier" placeholder="0" title="@{matrix_modifier}" type="number" value="0"/>
+          <input name="attr_matrix_mod_modifier" placeholder="0" title="@{matrix_modifier}" type="number" value="0"/>
         </label><span class="settings">+</span>
         <label class="settings" data-i18n-title="modifierdice" title="Modifier Dice">
           <input min="0" max="4" name="attr_matrix_dice_modifier" placeholder="0" title="@{matrix_dice_modifier}" type="number" value="0"/>
@@ -2291,31 +2291,31 @@
         <button data-i18n="acidprotection" name="acidprotection" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{acidprotection}}}{{base=base}}{{dice=[[((@{soak}+@{acid_modifier})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">acidprotection</button>
         <label class="settings" data-i18n-title="acidprotection" title="acidprotection">
           <input name="attr_acid_modifier" placeholder="0" title="@{acid_modifier}" type="number" value="0"/>
-        </label><span class="settings tiny-span">=</span><span name="attr_acid_protection"></span>
+        </label>
       </div>
       <div class="rows">
         <button data-i18n="coldprotection" name="coldprotection" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{coldprotection}}}{{base=base}}{{dice=[[((@{soak}+@{cold_modifier})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">coldprotection</button>
         <label class="settings" data-i18n-title="coldprotection" title="coldprotection">
           <input name="attr_cold_modifier" placeholder="0" title="@{cold_modifier}" type="number" value="0"/>
-        </label><span class="settings tiny-span">=</span><span name="attr_cold_protection"></span>
+        </label>
       </div>
       <div class="rows">
         <button data-i18n="electricalprotection" name="electricalprotection" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{electricalprotection}}}{{base=base}}{{dice=[[((@{soak}+@{electrical_modifier})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">electricalprotection</button>
         <label class="settings" data-i18n-title="electricalprotection" title="electricalprotection">
           <input name="attr_electrical_modifier" placeholder="0" title="@{electrical_modifier}" type="number" value="0"/>
-        </label><span class="settings tiny-span">=</span><span name="attr_electrical_protection"></span>
+        </label>
       </div>
       <div class="rows">
         <button data-i18n="fireprotection" name="fireprotection" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{fireprotection}}}{{base=base}}{{dice=[[((@{soak}+@{fire_modifier})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">fireprotection</button>
         <label class="settings" data-i18n-title="fireprotection" title="fireprotection">
           <input name="attr_fire_modifier" placeholder="0" title="@{fire_modifier}" type="number" value="0"/>
-        </label><span class="settings tiny-span">=</span><span name="attr_fire_protection"></span>
+        </label>
       </div>
       <div class="rows">
         <button data-i18n="radiationprotection" name="radiationprotection" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{radiationprotection}}}{{base=base}}{{dice=[[((@{soak}+@{radiation_modifier})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">radiationprotection</button>
         <label class="settings" data-i18n-title="radiationprotection" title="radiationprotection">
           <input name="attr_radiation_modifier" placeholder="0" title="@{radiation_modifier}" type="number" value="0"/>
-        </label><span class="settings tiny-span">=</span><span name="attr_radiation_protection"></span>
+        </label>
       </div>
     </div>
     <!--/- OPTIONS-->
@@ -3331,17 +3331,8 @@
 		});
 	};
 
-	on("clicked:whisper", (eventinfo) => {
-		getAttrs([`gm_toggle`], (v) => {
-			setAttrs({
-				gm_toggle: (!v.gm_toggle.includes("gm")) ? "/w gm" : " "
-			});
-		});
-	});  
-
    [`core`, `arms`, `augs`, `gear`, `magic`, `matrix`, `social`, `vehicle`, `options`].forEach(attr => {
    		on(`clicked:tab_${attr}`, () => {
-   			console.log(`%c The button clicked was tab_${attr} update tab to ${attr}`, "color:purple;");
    			setAttrs({tab: attr});
    		});
    });
@@ -4662,7 +4653,7 @@
 										update[`${section}_cold_modifier`] = modification.rating;
 									} else if (modification.name === "Radiation Shielding") {
 										update[`${section}_radiation_modifier`] = modification.rating;
-									} else if (modification.name === "Chemical Protectio") {
+									} else if (modification.name === "Chemical Protection") {
 										update[`${section}_acid_modifier`] = modification.rating;
 									} else if (modification.name === "Fire Resistance") {
 										update[`${section}_fire_modifier`] = modification.rating;
