--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1235,10 +1235,14 @@
           <label data-i18n-title="modifier" title="modifier">
             <input name="attr_drain_modifier" title="@{drain_modifier}" type="number" value="0"/>
           </label>
-          <input class="magic-toggle" name="attr_magic_toggle" type="hidden" value="spells"/><div class="row-long">
-	<h3 data-i18n="spells">Spells</h3><h3 data-i18n="type">Type</h3><h3 data-i18n="range">Range</h3><h3 data-i18n="duration">Duration</h3><h3 data-i18n="drain">Drain</h3>
-</div>
-<div class="magic-spells">
+          <div class="row-long">
+            <h3 data-i18n="spells">spells</h3>
+            <h3 data-i18n="type">type</h3>
+            <h3 data-i18n="range">range</h3>
+            <h3 data-i18n="duration">duration</h3>
+            <h3 data-i18n="drain">drain</h3>
+          </div>
+          <input class="magic-toggle" name="attr_magic_toggle" type="hidden" value="spells"/><div class="magic-spells">
 	<fieldset class="repeating_spell">
 		<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 		<div class="settings">
@@ -1318,83 +1322,6 @@
 		<button class="pictos settings-button" name="act_spell" type="action">x</button>
 	</fieldset>
 </div>
-<div class="magic-preps">
-	<fieldset class="repeating_preps">
-		<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
-		<div class="settings">
-			<div>
-				<input type="text" name="attr_name" placeholder="Fireball" title="Spell name" />
-				<select name="attr_type" title="Type">
-					<option value="Mana" selected="selected" data-i18n="mana">Mana</option>
-					<option value="Physcial" data-i18n="physical">Physical</option>
-				</select>
-				<select name="attr_range" title="Range">
-					<option value="LOS" selected="selected" data-i18n="los">LOS</option>
-					<option value="LOS (A)" data-i18n="losa">LOS (A)</option>
-					<option value="Special" data-i18n="special">Special</option>
-					<option value="T" data-i18n="t">T</option>
-					<option value="T (A)" data-i18n="ta">T (A)</option>
-				</select>
-				<select name="attr_duration" title="Duration">
-					<option value="Instant" selected="selected" data-i18n="instant">Instant</option>
-					<option value="Permanent" data-i18n="permanent">Permanent</option>
-					<option value="Special" data-i18n="special">Special</option>
-					<option value="Sustained" data-i18n="sustained">Sustained</option>
-				</select>
-				<input type="number" name="attr_drain" value="" placeholder="-1" title="Drain code" />
-				<div class="settings-row">
-					<label data-i18n="category">Spell Category</label>
-					<select name="attr_category" title="Category">
-						<option class="option" value="Combat" selected="selected" data-i18n="combat">Combat</option>
-						<option class="option" value="Detection" data-i18n="detection">Detection</option>
-						<option class="option" value="Health" data-i18n="health">Health</option>
-						<option class="option" value="Illusion" data-i18n="illusion">Illusion</option>
-						<option class="option" value="Manipulation" data-i18n="manipulation">Manipulation</option>
-						<option class="option" value="Other" data-i18n="other">Other</option>
-					</select>
-					<input class="category" name="attr_category" type="hidden" value="Combat">
-					<div class="combat-type-hide">
-						<label data-i18n="combattype">Combat Type</label>
-						<select class="combat-type" name="attr_combat_type" title="Combat type">
-							<option class="option" value="Force " selected="selected"></option>
-							<option class="option" value="Direct, Force " data-i18n="direct">Direct</option>
-							<option class="option" value="Indirect, Force ?{Force|}, AP -" data-i18n="indirect">Indirect</option>
-						</select>
-						<label class="combat-type" data-i18n="damagetype">Combat Damage</label><input class="spell-input" type="text" name="attr_damage" value="" placeholder="P" title="Damage type" style="width: 8%;"/>
-					</div>
-				</div>
-				<div class="settings-row">
-					<input type="hidden" name="attr_dicepool" value="0" />
-					<label data-i18n="magicalskill">Magic Skill</label>
-					<select class="skill-select" name="attr_skill" title="Magic skill">
-						<option class="option-headers" disabled="true" data-i18n="magicalskills">Magic Skills</option>
-						<option class="option-groups" value="@{enchanting}" data-i18n="enchantinggroup">Enchanting Group</option>
-						<option value="@{alchemy}" selected="selected" data-i18n="alchemy">Alchemy</option>
-					</select>
-					<label data-i18n="specializations">Specialization</label><input class="skill-select" type="checkbox" name="attr_spec" value="2" title="Applicable specialization" />
-					<label data-i18n="modifierdice">modifier dice</label><input type="number" name="attr_dicepool_modifier" title="Additional dicepool bonus" />
-				</div>
-				<label data-i18n="notes">Notes</label>
-				<textarea name="attr_notes" value="" placeholder="Alchemy notes"></textarea>
-			</div>
-		</div>
-		<div class="display">
-			<input class="display-flag" type="checkbox" name="attr_display_flag" />
-			<div class="display-row" title="Spell roll"><button type="roll" name="alchemic" value="@{gm_toggle} &{template:rolls}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_name"></span></button></div>
-			<div class="display-row" title="Type"><span name="attr_type"></span></div>
-			<div class="display-row" title="Range"><span name="attr_range"></span></div>
-			<div class="display-row" title="Duration"><span name="attr_duration"></span></div>
-			<div class="display-row" style="text-align: center;" title="Drain code"><span name="attr_drain"></span></div>
-			<input class="display-flag" type="checkbox" name="attr_display_flag" title="Display notes" /><span>i</span>
-			<div class="collapsable">
-				<div class="desc"><i><span name="attr_category" title="Category"></span></i></div>
-				<div class="desc"><i><input class="combat-type" type="hidden" name="attr_combat_type" title="Combat type"/><span></span></i></div>
-				<div class="desc"><span name="attr_notes"></span></div>
-			</div>
-		</div>
-		<button class="pictos settings-button" name="act_preps" type="action">x</button
-	</fieldset>
-</div>
 <div class="magic-rituals">
 	<fieldset class="repeating_ritual">
 		<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
@@ -1427,6 +1354,117 @@
 		<button class="pictos settings-button" name="act_ritual" type="action">x</button>
 	</fieldset>
 </div>
+          <div class="magic-preps">
+            <div class="rows repeating"><fieldset class="repeating_preps">
+	<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
+	<div class="settings">
+		<div>
+			<input type="text" name="attr_name" placeholder="Fireball" title="Spell name" />
+			<select name="attr_type" title="Type">
+				<option value="Mana" selected="selected" data-i18n="mana">Mana</option>
+				<option value="Physcial" data-i18n="physical">Physical</option>
+			</select>
+			<select name="attr_range" title="Range">
+				<option value="LOS" selected="selected" data-i18n="los">LOS</option>
+				<option value="LOS (A)" data-i18n="losa">LOS (A)</option>
+				<option value="Special" data-i18n="special">Special</option>
+				<option value="T" data-i18n="t">T</option>
+				<option value="T (A)" data-i18n="ta">T (A)</option>
+			</select>
+			<select name="attr_duration" title="Duration">
+				<option value="Instant" selected="selected" data-i18n="instant">Instant</option>
+				<option value="Permanent" data-i18n="permanent">Permanent</option>
+				<option value="Special" data-i18n="special">Special</option>
+				<option value="Sustained" data-i18n="sustained">Sustained</option>
+			</select>
+			<input type="number" name="attr_drain" value="" placeholder="-1" title="Drain code" />
+			<div class="settings-row">
+				<label data-i18n="category">Spell Category</label>
+				<select name="attr_category" title="Category">
+					<option class="option" value="Combat" selected="selected" data-i18n="combat">Combat</option>
+					<option class="option" value="Detection" data-i18n="detection">Detection</option>
+					<option class="option" value="Health" data-i18n="health">Health</option>
+					<option class="option" value="Illusion" data-i18n="illusion">Illusion</option>
+					<option class="option" value="Manipulation" data-i18n="manipulation">Manipulation</option>
+					<option class="option" value="Other" data-i18n="other">Other</option>
+				</select>
+				<input class="category" name="attr_category" type="hidden" value="Combat">
+				<div class="combat-type-hide">
+					<label data-i18n="combattype">Combat Type</label>
+					<select class="combat-type" name="attr_combat_type" title="Combat type">
+						<option class="option" value="Force " selected="selected"></option>
+						<option class="option" value="Direct, Force " data-i18n="direct">Direct</option>
+						<option class="option" value="Indirect, Force ?{Force|}, AP -" data-i18n="indirect">Indirect</option>
+					</select>
+					<label class="combat-type" data-i18n="damagetype">Combat Damage</label><input class="spell-input" type="text" name="attr_damage" value="" placeholder="P" title="Damage type" style="width: 8%;"/>
+				</div>
+			</div>
+			<div class="settings-row">
+				<input type="hidden" name="attr_dicepool" value="0" />
+				<label data-i18n="magicalskill">Magic Skill</label>
+				<select class="skill-select" name="attr_skill" title="Magic skill">
+					<option class="option-headers" disabled="true" data-i18n="magicalskills">Magic Skills</option>
+					<option class="option-groups" value="@{enchanting}" data-i18n="enchantinggroup">Enchanting Group</option>
+					<option value="@{alchemy}" selected="selected" data-i18n="alchemy">Alchemy</option>
+				</select>
+				<label data-i18n="specializations">Specialization</label><input class="skill-select" type="checkbox" name="attr_spec" value="2" title="Applicable specialization" />
+				<label data-i18n="modifierdice">modifier dice</label><input type="number" name="attr_dicepool_modifier" title="Additional dicepool bonus" />
+			</div>
+			<label data-i18n="notes">Notes</label>
+			<textarea name="attr_notes" value="" placeholder="Alchemy notes"></textarea>
+		</div>
+	</div>
+	<div class="display">
+		<input class="display-flag" type="checkbox" name="attr_display_flag" />
+		<div class="display-row" title="Spell roll"><button type="roll" name="alchemic" value="@{gm_toggle} &{template:rolls}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_name"></span></button></div>
+		<div class="display-row" title="Type"><span name="attr_type"></span></div>
+		<div class="display-row" title="Range"><span name="attr_range"></span></div>
+		<div class="display-row" title="Duration"><span name="attr_duration"></span></div>
+		<div class="display-row" style="text-align: center;" title="Drain code"><span name="attr_drain"></span></div>
+		<input class="display-flag" type="checkbox" name="attr_display_flag" title="Display notes" /><span>i</span>
+		<div class="collapsable">
+			<div class="desc"><i><span name="attr_category" title="Category"></span></i></div>
+			<div class="desc"><i><input class="combat-type" type="hidden" name="attr_combat_type" title="Combat type"/><span></span></i></div>
+			<div class="desc"><span name="attr_notes"></span></div>
+		</div>
+	</div>
+	<button class="pictos settings-button" name="act_preps" type="action">x</button
+</fieldset>
+
+            </div>
+            <div class="rows repeating">
+              <h2 data-i18n="preperation">preperation</h2>
+              <fieldset class="repeating_preperations">
+                <input class="toggle" name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
+                <button name="preperation" type="roll" value="@{gm_toggle} &amp;{template:rolls}{{header=@{name}}}{{desc=@{note}}}"><span name="attr_name"></span></button><span name="attr_note"></span>
+                <div class="settings">
+                  <h3 data-i18n="name">name</h3>
+                  <label data-i18n-title="name" title="name">
+                    <input name="attr_name" placeholder="Name" title="@{repeating_preperations_${x}_name}" type="text" value=""/>
+                  </label>
+                  <h3 data-i18n="force">force</h3>
+                  <label data-i18n-title="force" title="force">
+                    <input name="attr_force" placeholder="1" title="@{repeating_preperations_${x}_force}" type="number" value=""/>
+                  </label>
+                  <h3 data-i18n="potency">potency</h3>
+                  <label data-i18n-title="potency" title="potency">
+                    <input name="attr_potency" placeholder="1" title="@{repeating_preperations_${x}_potency}" type="number" value=""/>
+                  </label>
+                  <h3 data-i18n="trigger">trigger</h3>
+                  <select name="attr_trigger" title="@{repeating_preperations_${x}_trigger}">
+                    <option data-i18n="command" value="command">command</option>
+                    <option data-i18n="contact" value="contact">contact</option>
+                    <option data-i18n="time" value="time">time</option>
+                    <option data-i18n="special" value="special">special</option>
+                  </select>
+                  <h3 data-i18n="notes">notes</h3>
+                  <label data-i18n-title="notes" title="notes">
+                    <textarea name="attr_note" placeholder="Notes" title="@{repeating_preperations_${x}_note}" type="text" value=""></textarea>
+                  </label>
+                </div>
+              </fieldset>
+            </div>
+          </div>
         </div>
       </div>
     </div>
