Add maximum target DC for attribute checks
In Low Fantasy Gaming, attribute checks are a d20, roll under, system.  No matter how high your attribute, a natural roll of 20 is a failure.  Natural 20's were not presenting as failures in the case of an attribute score higher than 19.

--- a/Low Fantasy Gaming/LFGSheet.html
+++ b/Low Fantasy Gaming/LFGSheet.html
@@ -99,7 +99,7 @@
 					    <!-- How to show advantage in the roll template
 					        {{subheaderright= @{strengthadvantage}}} -> this will just eval as the roll result
 					    -->
-						<button type="roll" name="roll_Str" value="&{template:5eDefault} {{ability=1}} {{title=Strength Check}} {{subheader=@{character_name}}} {{check=[[@{strengthadvantage}]]}} {{target=[[@{strength}]]}} {{gsresult=[[@{strength_gs}]]}} {{tfresult=[[@{strength_tf}]]}}"></button>
+						<button type="roll" name="roll_Str" value="&{template:5eDefault} {{ability=1}} {{title=Strength Check}} {{subheader=@{character_name}}} {{check=[[@{strengthadvantage}]]}} {{target=[[{@{strength}, 19}kl1]]}} {{gsresult=[[@{strength_gs}]]}} {{tfresult=[[@{strength_tf}]]}}"></button>
 					</div>
 					<div class="sheet-col-1-4 sheet-tiny-note">Melee,&nbsp;Athletics</div>
 				</div>
@@ -120,7 +120,7 @@
                         </select>
                     </div>
 					<div class="sheet-col-1-14 sheet-center">
-						<button type="roll" name="roll_Dex" value="&{template:5eDefault} {{ability=1}} {{title=Dexterity Check}} {{subheader=@{character_name}}} {{check=[[@{dexterityadvantage}]]}} {{target=[[@{dexterity}]]}} {{gsresult=[[@{dexterity_gs}]]}} {{tfresult=[[@{dexterity_tf}]]}}"></button>
+						<button type="roll" name="roll_Dex" value="&{template:5eDefault} {{ability=1}} {{title=Dexterity Check}} {{subheader=@{character_name}}} {{check=[[@{dexterityadvantage}]]}} {{target=[[{@{dexterity}, 19}kl1]]}} {{gsresult=[[@{dexterity_gs}]]}} {{tfresult=[[@{dexterity_tf}]]}}"></button>
 					</div>
 					<div class="sheet-col-1-4 sheet-tiny-note">Ranged,&nbsp;AC</div>
 				</div>
@@ -141,7 +141,7 @@
                         </select>
                     </div>
 					<div class="sheet-col-1-14 sheet-center">
-						<button type="roll" name="roll_Con" value="&{template:5eDefault} {{ability=1}} {{title=Constitution Check}} {{subheader=@{character_name}}} {{check=[[@{constitutionadvantage}]]}} {{target=[[@{constitution}]]}} {{gsresult=[[@{constitution_gs}]]}} {{tfresult=[[@{constitution_tf}]]}}"></button>
+						<button type="roll" name="roll_Con" value="&{template:5eDefault} {{ability=1}} {{title=Constitution Check}} {{subheader=@{character_name}}} {{check=[[@{constitutionadvantage}]]}} {{target=[[{@{constitution}, 19}kl1]]}} {{gsresult=[[@{constitution_gs}]]}} {{tfresult=[[@{constitution_tf}]]}}"></button>
 					</div>
 					<div class="sheet-col-1-4 sheet-tiny-note">Hit&nbsp;Points,&nbsp;Poison</div>
 				</div>
@@ -162,7 +162,7 @@
                         </select>
                     </div>
 					<div class="sheet-col-1-14 sheet-center">
-						<button type="roll" name="roll_Int" value="&{template:5eDefault} {{ability=1}} {{title=Intelligence Check}} {{subheader=@{character_name}}} {{check=[[@{intelligenceadvantage}]]}} {{target=[[@{intelligence}]]}} {{gsresult=[[@{intelligence_gs}]]}} {{tfresult=[[@{intelligence_tf}]]}}"></button>
+						<button type="roll" name="roll_Int" value="&{template:5eDefault} {{ability=1}} {{title=Intelligence Check}} {{subheader=@{character_name}}} {{check=[[@{intelligenceadvantage}]]}} {{target=[[{@{intelligence}, 19}kl1]]}} {{gsresult=[[@{intelligence_gs}]]}} {{tfresult=[[@{intelligence_tf}]]}}"></button>
 					</div>
 					<div class="sheet-col-1-4 sheet-tiny-note">Lore,&nbsp;Insight,&nbsp;Lang</div>
 				</div>
@@ -183,7 +183,7 @@
                         </select>
                     </div>
 					<div class="sheet-col-1-14 sheet-center">
-						<button type="roll" name="roll_Per" value="&{template:5eDefault} {{ability=1}} {{title=Perception Check}} {{subheader=@{character_name}}} {{check=[[@{perceptionadvantage}]]}} {{target=[[@{perception}]]}} {{gsresult=[[@{perception_gs}]]}} {{tfresult=[[@{perception_tf}]]}}"></button>
+						<button type="roll" name="roll_Per" value="&{template:5eDefault} {{ability=1}} {{title=Perception Check}} {{subheader=@{character_name}}} {{check=[[@{perceptionadvantage}]]}} {{target=[[{@{perception}, 19}kl1]]}} {{gsresult=[[@{perception_gs}]]}} {{tfresult=[[@{perception_tf}]]}}"></button>
 					</div>
 					<div class="sheet-col-1-4 sheet-tiny-note">Alertness,&nbsp;Detection</div>
 				</div>
@@ -204,7 +204,7 @@
                         </select>
                     </div>
 					<div class="sheet-col-1-14 sheet-center">
-						<button type="roll" name="roll_Will" value="&{template:5eDefault} {{ability=1}} {{title=Willpower Check}} {{subheader=@{character_name}}} {{check=[[@{willpoweradvantage}]]}} {{target=[[@{willpower}]]}} {{gsresult=[[@{willpower_gs}]]}} {{tfresult=[[@{willpower_tf}]]}}"></button>
+						<button type="roll" name="roll_Will" value="&{template:5eDefault} {{ability=1}} {{title=Willpower Check}} {{subheader=@{character_name}}} {{check=[[@{willpoweradvantage}]]}} {{target=[[{@{willpower}, 19}kl1]]}} {{gsresult=[[@{willpower_gs}]]}} {{tfresult=[[@{willpower_tf}]]}}"></button>
 					</div>
 					<div class="sheet-col-1-4 sheet-tiny-note">Mental&nbsp;Defence,&nbsp;Recovery</div>
 				</div>
@@ -225,7 +225,7 @@
                         </select>
                     </div>
 					<div class="sheet-col-1-14 sheet-center">
-						<button type="roll" name="roll_Cha" value="&{template:5eDefault} {{ability=1}} {{title=Charisma Check}} {{subheader=@{character_name}}} {{check=[[@{charismaadvantage}]]}} {{target=[[@{charisma}]]}} {{gsresult=[[@{charisma_gs}]]}} {{tfresult=[[@{charisma_tf}]]}}"></button>
+						<button type="roll" name="roll_Cha" value="&{template:5eDefault} {{ability=1}} {{title=Charisma Check}} {{subheader=@{character_name}}} {{check=[[@{charismaadvantage}]]}} {{target=[[{@{charisma}, 19}kl1]]}} {{gsresult=[[@{charisma_gs}]]}} {{tfresult=[[@{charisma_tf}]]}}"></button>
 					</div>
 					<div class="sheet-col-1-4 sheet-tiny-note">Influence,&nbsp;Morale</div>
 				</div>
