--- a/Pathfinder Second Edition by Roll20/pathfinder2.html
+++ b/Pathfinder Second Edition by Roll20/pathfinder2.html
@@ -1721,6 +1721,61 @@
                         </div>
                     </fieldset>
                 </div>
+                <div class="weapon-proficiences background-color">
+                    <h1 data-i18n="armor_proficiencies">armor proficiencies</h1>                    
+			<div class="armorclass-unarmored-grid">
+                            <div class="armorclass-unarmored">
+                                <h2 data-i18n="unarmored">unarmored</h2>
+                                <label data-i18n-title="unarmed_rank_select" title="unarmored rank select">
+                                    <select name="attr_armor_class_unarmored_rank" title="@{armor_class_unarmored_rank}">
+                                        <option data-i18n="untrained" value="0" selected>untrained</option>
+                                        <option data-i18n="trained" value="2">trained</option>
+                                        <option data-i18n="expert" value="4">expert</option>
+                                        <option data-i18n="master" value="6">master</option>
+                                        <option data-i18n="legendary" value="8">legendary</option>
+                                    </select>
+                                </label>
+                            </div>
+                            <div class="armorclass-light">
+                                <h2 data-i18n="light">light</h2>
+                                <label data-i18n-title="light_armor_rank_select" title="light armor rank select">
+                                    <select name="attr_armor_class_light_rank" title="@{armor_class_light_rank}">
+                                        <option data-i18n="untrained" value="0" selected>untrained</option>
+                                        <option data-i18n="trained" value="2">trained</option>
+                                        <option data-i18n="expert" value="4">expert</option>
+                                        <option data-i18n="master" value="6">master</option>
+                                        <option data-i18n="legendary" value="8">legendary</option>
+                                    </select>
+                                </label>
+                            </div>
+			</div>                 
+			<div class="armorclass-unarmored-grid">			
+                            <div class="armorclass-medium">
+                                <h2 data-i18n="medium">medium</h2>
+                                <label data-i18n-title="medium_armor_rank_select" title="medium armor rank select">
+                                    <select name="attr_armor_class_medium_rank" title="@{armor_class_medium_rank}">
+                                        <option data-i18n="untrained" value="0" selected>untrained</option>
+                                        <option data-i18n="trained" value="2">trained</option>
+                                        <option data-i18n="expert" value="4">expert</option>
+                                        <option data-i18n="master" value="6">master</option>
+                                        <option data-i18n="legendary" value="8">legendary</option>
+                                    </select>
+                                </label>
+                            </div>
+                            <div class="armorclass-heavy">
+                                <h2 data-i18n="heavy">heavy</h2>
+                                <label data-i18n-title="heavy_armor_rank_select" title="heavy armor rank select">
+                                    <select name="attr_armor_class_heavy_rank" title="@{armor_class_heavy_rank}">
+                                        <option data-i18n="untrained" value="0" selected>untrained</option>
+                                        <option data-i18n="trained" value="2">trained</option>
+                                        <option data-i18n="expert" value="4">expert</option>
+                                        <option data-i18n="master" value="6">master</option>
+                                        <option data-i18n="legendary" value="8">legendary</option>
+                                    </select>
+                                </label>
+                            </div>
+                        </div>    
+                </div>
             </div>
 
             <!--- ARMOR CLASS column --->
@@ -1794,14 +1849,13 @@
                                 <input data-i18n-placeholder="3" name="attr_armor_class_cap" placeholder="3" spellcheck="false" title="@{armor_class_cap}" type="text" value="" />
                             </label>
                         </div>
-                        <label class="sublabel" data-i18n-title="armor_class_rank_select" title="armor class rank select">
-                            <span class="sublabel darkred" data-i18n="rank">rank</span>
+                        <label class="sublabel" data-i18n-title="armor_class_type_select" title="armor type select">
+                            <span class="sublabel darkred" data-i18n="type">type</span>
                             <select name="attr_armor_class_dc_rank" title="@{armor_class_dc_rank}">
-                                <option data-i18n="untrained" value="0" selected>untrained</option>
-                                <option data-i18n="trained" value="2">trained</option>
-                                <option data-i18n="expert" value="4">expert</option>
-                                <option data-i18n="master" value="6">master</option>
-                                <option data-i18n="legendary" value="8">legendary</option>
+                                <option data-i18n="unarmored" value="@{armor_class_unarmored_rank}" selected>unarmored</option>
+                                <option data-i18n="light" value="@{armor_class_light_rank}">light</option>
+                                <option data-i18n="medium" value="@{armor_class_medium_rank}">medium</option>
+                                <option data-i18n="heavy" value="@{armor_class_heavy_rank}">heavy</option>
                             </select>
                         </label>
                         <label class="sublabel" data-i18n-title="armor_class_item" title="armor class item">
@@ -1812,57 +1866,10 @@
                             <span class="sublabel darkred" data-i18n="temp">temp</span>
                             <input data-i18n-placeholder="0" name="attr_armor_class_temporary" placeholder="0" spellcheck="false" title="@{armor_class_temporary}" type="text" value="0" />
                         </label>
-                        <!-- Unarmored row -->
-                        <div class="armorclass-unarmored-grid">
-                            <div class="armorclass-unarmored">
-                                <h2 data-i18n="unarmored">unarmored</h2>
-                                <label data-i18n-title="unarmed_rank_select" title="unarmored rank select">
-                                    <select name="attr_armor_class_unarmored_rank" title="@{armor_class_unarmored_rank}">
-                                        <option data-i18n="untrained" value="0" selected>untrained</option>
-                                        <option data-i18n="trained" value="2">trained</option>
-                                        <option data-i18n="expert" value="4">expert</option>
-                                        <option data-i18n="master" value="6">master</option>
-                                        <option data-i18n="legendary" value="8">legendary</option>
-                                    </select>
-                                </label>
-                            </div>
-                            <div class="armorclass-light">
-                                <h2 data-i18n="light">light</h2>
-                                <label data-i18n-title="light_armor_rank_select" title="light armor rank select">
-                                    <select name="attr_armor_class_light_rank" title="@{armor_class_light_rank}">
-                                        <option data-i18n="untrained" value="0" selected>untrained</option>
-                                        <option data-i18n="trained" value="2">trained</option>
-                                        <option data-i18n="expert" value="4">expert</option>
-                                        <option data-i18n="master" value="6">master</option>
-                                        <option data-i18n="legendary" value="8">legendary</option>
-                                    </select>
-                                </label>
-                            </div>
-                            <div class="armorclass-medium">
-                                <h2 data-i18n="medium">medium</h2>
-                                <label data-i18n-title="medium_armor_rank_select" title="medium armor rank select">
-                                    <select name="attr_armor_class_medium_rank" title="@{armor_class_medium_rank}">
-                                        <option data-i18n="untrained" value="0" selected>untrained</option>
-                                        <option data-i18n="trained" value="2">trained</option>
-                                        <option data-i18n="expert" value="4">expert</option>
-                                        <option data-i18n="master" value="6">master</option>
-                                        <option data-i18n="legendary" value="8">legendary</option>
-                                    </select>
-                                </label>
-                            </div>
-                            <div class="armorclass-heavy">
-                                <h2 data-i18n="heavy">heavy</h2>
-                                <label data-i18n-title="heavy_armor_rank_select" title="heavy armor rank select">
-                                    <select name="attr_armor_class_heavy_rank" title="@{armor_class_heavy_rank}">
-                                        <option data-i18n="untrained" value="0" selected>untrained</option>
-                                        <option data-i18n="trained" value="2">trained</option>
-                                        <option data-i18n="expert" value="4">expert</option>
-                                        <option data-i18n="master" value="6">master</option>
-                                        <option data-i18n="legendary" value="8">legendary</option>
-                                    </select>
-                                </label>
-                            </div>
-                        </div>
+                        <label class="sublabel" data-i18n-title="armor_class_penality" title="armor class penality">
+                            <span class="sublabel darkred" data-i18n="pen">pen</span>
+                            <input data-i18n-placeholder="0" name="attr_armor_class_penality" placeholder="0" spellcheck="false" title="@{armor_class_penality}" type="text" value="0" />
+                        </label>
                         <label data-i18n-title="armor_class_notes" title="armor class notes">
                             <span data-i18n="notes">notes</span>
                             <textarea data-i18n-placeholder="notes" name="attr_armor_class_notes" placeholder="notes" spellcheck="false" title="@{armor_class_notes}" value=""></textarea>
@@ -2137,7 +2144,7 @@
                         </label>
                         <label data-i18n-title="acrobatics_armor_pentalty" title="acrobatics armor pentalty">
                             <span class="sublabel darkred" data-i18n="armor">armor</span>
-                            <input data-i18n-placeholder="0" name="attr_acrobatics_armor" placeholder="0" spellcheck="false" title="@{acrobatics_armor}" type="text" value="" />
+                            <input data-i18n-placeholder="0" name="attr_acrobatics_armor" placeholder="0" spellcheck="false" title="@{acrobatics_armor}" type="text" value="@{armor_class_penality}" />
                         </label>
                         <label data-i18n-title="acrobatics_notes" title="acrobatics notes">
                             <span data-i18n="notes">Notes</span>
@@ -2275,7 +2282,7 @@
                         </label>
                         <label data-i18n-title="athletics_armor_pentalty" title="athletics armor pentalty">
                             <span class="sublabel darkred" data-i18n="armor">armor</span>
-                            <input data-i18n-placeholder="0" name="attr_athletics_armor" placeholder="0" spellcheck="false" title="@{athletics_armor}" type="text" value="" />
+                            <input data-i18n-placeholder="0" name="attr_athletics_armor" placeholder="0" spellcheck="false" title="@{athletics_armor}" type="text" value="@{armor_class_penality}" />
                         </label>
                         <label data-i18n-title="athletics_notes" title="athletics notes">
                             <span data-i18n="notes">Notes</span>
@@ -3000,7 +3007,7 @@
                         </label>
                         <label data-i18n-title="stealth_armor_pentalty" title="stealth armor pentalty">
                             <span class="sublabel darkred" data-i18n="armor">armor</span>
-                            <input data-i18n-placeholder="0" name="attr_stealth_armor" placeholder="0" spellcheck="false" title="@{stealth_armor}" type="text" value="" />
+                            <input data-i18n-placeholder="0" name="attr_stealth_armor" placeholder="0" spellcheck="false" title="@{stealth_armor}" type="text" value="@{armor_class_penality}" />
                         </label>
                         <label data-i18n-title="stealth_notes" title="stealth notes">
                             <span data-i18n="notes">Notes</span>
@@ -3138,7 +3145,7 @@
 						</label>
 						<label data-i18n-title="thievery_armor_pentalty" title="thievery armor pentalty">
 							<span class="sublabel darkred" data-i18n="armor">armor</span>
-							<input data-i18n-placeholder="0" name="attr_thievery_armor" placeholder="0" spellcheck="false" title="@{thievery_armor}" type="text" value="" />
+							<input data-i18n-placeholder="0" name="attr_thievery_armor" placeholder="0" spellcheck="false" title="@{thievery_armor}" type="text" value="@{armor_class_penality}" />
 						</label>
 						<label data-i18n-title="thievery_notes" title="thievery notes">
 							<span data-i18n="notes">Notes</span>
